--- a/ex/bikcraft-basico/index.html
+++ b/ex/bikcraft-basico/index.html
@@ -1,14 +1,57 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="assets/css/style.css">
-  <title>Bikcraft</title>
-</head>
-<body>
-  <header>
-    <div><img src="assets/img/bikcraft.svg" alt="bikcraft"></div>
-  </header>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <title>Bikcraft</title>
+  </head>
+  <body>
+      <img src="assets/img/bikcraft.svg" alt="bikcraft" />
+
+      <nav class="menu">
+        <a href="#">Sobre</a><a href="#">Produtos</a><a href="#">Lojas</a
+        ><a href="#">Contato</a>
+      </nav>
+
+    <main class="conteudo">
+      <div class="intro">
+        <span class="detalhe"></span>
+        <h1>Bicicletas Feitas a Mão</h1>
+        <p>
+          A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela
+          vem equipada com os melhores acessórios da marca.
+        </p>
+        <a href="#" class="botao">Ver Mais</a>
+      </div>
+
+        <img src="assets/img/bicicleta.jpg" alt="Bicicleta Bikcraft Preta" />
+
+        <h2 class="subtitulo">Vantagens Bikcraft</h2>
+
+      <div class="vantagens">
+        <div class="vantagens-item">
+          <img src="assets/img/eletrica.svg" alt="" />
+          <h3>Motor Elétrico</h3>
+          <p>Permite você viajar distâncias inimagináveis com a sua bike.</p>
+        </div>
+
+        <div class="vantagens-item">
+          <img src="assets/img/velocidade.svg" alt="" class="aaa"/>
+          <h3>40 km/h</h3>
+          <p>A mais rápida bicicleta elétrica disponível hoje no mercado.</p>
+        </div>
+
+        <div class="vantagens-item">
+          <img src="assets/img/rastreador.svg" alt="" />
+          <h3>Rastreador</h3>
+          <p>Rastreador e sistema anti-furto para garantir o seu sossego.</p>
+        </div>
+      </div>
+    </main>
+
+    <footer>
+      <p>Bikcraft. Alguns Direitos Reservados.</p>
+    </footer>
+  </body>
 </html>
