--- a/ex/bikcraft-basico/index.html
+++ b/ex/bikcraft-basico/index.html
@@ -7,47 +7,52 @@
     <title>Bikcraft</title>
   </head>
   <body>
+    <header class="header">
       <img src="assets/img/bikcraft.svg" alt="bikcraft" />
 
-      <nav class="menu">
-        <a href="#">Sobre</a><a href="#">Produtos</a><a href="#">Lojas</a
-        ><a href="#">Contato</a>
+      <nav aria-label="primária">
+        <ul class="menu">
+          <li><a href="#">Sobre</a></li>
+          <li><a href="#">Produtos</a></li>
+          <li><a href="#">Lojas</a></li>
+          <li><a href="#">Contato</a></li>
+        </ul>
       </nav>
+    </header>
 
-    <main class="conteudo">
-      <div class="intro">
-        <span class="detalhe"></span>
-        <h1>Bicicletas Feitas a Mão</h1>
-        <p>
-          A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela
-          vem equipada com os melhores acessórios da marca.
-        </p>
-        <a href="#" class="botao">Ver Mais</a>
-      </div>
-
-        <img src="assets/img/bicicleta.jpg" alt="Bicicleta Bikcraft Preta" />
-
-        <h2 class="subtitulo">Vantagens Bikcraft</h2>
-
-      <div class="vantagens">
-        <div class="vantagens-item">
-          <img src="assets/img/eletrica.svg" alt="" />
-          <h3>Motor Elétrico</h3>
-          <p>Permite você viajar distâncias inimagináveis com a sua bike.</p>
+    <main>
+      <article class="conteudo">
+        <div class="intro" aria-labelledby="label-intro">
+          <h1 id="label-intro">Bicicletas Feitas a Mão</h1>
+          <p>
+            A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela
+            vem equipada com os melhores acessórios da marca.
+          </p>
+          <a href="#" class="botao">Ver Mais</a>
         </div>
+      <img src="assets/img/bicicleta.jpg" alt="Bicicleta Bikcraft Preta" />
+      </article>
 
-        <div class="vantagens-item">
-          <img src="assets/img/velocidade.svg" alt="" class="aaa"/>
-          <h3>40 km/h</h3>
-          <p>A mais rápida bicicleta elétrica disponível hoje no mercado.</p>
-        </div>
-
-        <div class="vantagens-item">
-          <img src="assets/img/rastreador.svg" alt="" />
-          <h3>Rastreador</h3>
-          <p>Rastreador e sistema anti-furto para garantir o seu sossego.</p>
-        </div>
-      </div>
+      <article class="conteudo" aria-labelledby="label-vantagens">
+        <h2 class="subtitulo" id="label-vantagens">Vantagens Bikcraft</h2>
+        <ul class="vantagens">
+          <li class="vantagens-item">
+            <img src="assets/img/eletrica.svg" alt="" />
+            <h3>Motor Elétrico</h3>
+            <p>Permite você viajar distâncias inimagináveis com a sua bike.</p>
+          </li>
+          <li class="vantagens-item">
+            <img src="assets/img/velocidade.svg" alt=""/>
+            <h3>40 km/h</h3>
+            <p>A mais rápida bicicleta elétrica disponível hoje no mercado.</p>
+          </li>
+          <li class="vantagens-item">
+            <img src="assets/img/rastreador.svg" alt="" />
+            <h3>Rastreador</h3>
+            <p>Rastreador e sistema anti-furto para garantir o seu sossego.</p>
+          </li>
+        </ul>
+      </article>
     </main>
 
     <footer>
