--- a/ex/bikcraft-basico/index.html
+++ b/ex/bikcraft-basico/index.html
@@ -30,10 +30,12 @@
           </p>
           <a href="#" class="botao">Ver Mais</a>
         </div>
-      <img src="assets/img/bicicleta.jpg" alt="Bicicleta Bikcraft Preta" />
+        <div class="intro-cover">
+          <img src="assets/img/bicicleta.jpg" alt="Bicicleta Bikcraft Preta" />
+        </div>
       </article>
 
-      <article class="conteudo" aria-labelledby="label-vantagens">
+      <article class="conteudo grid-vantagem" aria-labelledby="label-vantagens">
         <h2 class="subtitulo" id="label-vantagens">Vantagens Bikcraft</h2>
         <ul class="vantagens">
           <li class="vantagens-item">
@@ -42,7 +44,7 @@
             <p>Permite você viajar distâncias inimagináveis com a sua bike.</p>
           </li>
           <li class="vantagens-item">
-            <img src="assets/img/velocidade.svg" alt=""/>
+            <img src="assets/img/velocidade.svg" alt="" />
             <h3>40 km/h</h3>
             <p>A mais rápida bicicleta elétrica disponível hoje no mercado.</p>
           </li>
