--- a/ex/js/conditional/index.html
+++ b/ex/js/conditional/index.html
@@ -3,11 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./style.css">
-  <title>Funções</title>
+  <link rel="stylesheet" href="style.css">
+  <title>Condicionais</title>
 </head>
 <body>
+  <button>Adicionar</button>
+  <div>0</div>
+  <p></p>
 
-  <script src="./script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
