--- a/JavaScript/05-efeitos-no-dom/0513-button-creator-html-e-css/index.html
+++ b/JavaScript/05-efeitos-no-dom/0513-button-creator-html-e-css/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Button Creator</title>
   <link rel="stylesheet" href="style.css">
 </head>
@@ -13,7 +12,7 @@
       <label for="texto">texto</label>
       <input type="text" name="texto" id="texto">
       <label for="color">color</label>
-      <input type="color" name="color" id="color">
+      <input type="color" name="color" id="cor">
       <label for="backgroundColor">background-color</label>
       <input type="color" name="backgroundColor" id="backgroundColor">
       <label for="height">height</label>
@@ -31,10 +30,13 @@
       </select>
       <label for="fontSize">font-size</label>
       <input type="number" name="fontSize" id="fontSize">
+      
     </form>
     <section class="resultado">
       <button class="btn">Clique</button>
-      <pre><code class="css"></code></pre>
+      <pre><code class="css">
+        
+      </code></pre>
     </section>
   </section>
   <script src="script.js"></script>
