--- a/JavaScript/06-javascript-assincrono/0603-fetch/index.html
+++ b/JavaScript/06-javascript-assincrono/0603-fetch/index.html
@@ -1,35 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Fetch</title>
-</head>
-<body>
-  <style>
-    label {
-      display: block;
-    }
-    input {
-      display: block;
-    }
-  </style>
-  <form id="buscaCep">
-    <label for="cep">CEP</label>
-    <input type="text" name="cep" id="cep">
-    <input type="button" value="Buscar Cep" id="btnCep">
-  </form>
-  <div class="resultadoCep">
-  </div>
-  <div>
-    <h2>Preço BTC</h2>
-    <p class="btc"></p>
-  </div>
-  <div>
-    <p class="piada"></p>
-    <button class="proxima">Proxima</button>
-  </div>
-  <script src="script.js"></script>
-</body>
+<html lang="pt-BR">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Fetch</title>
+  </head>
+  <body>
+    <style>
+      label {
+        display: block;
+      }
+      input {
+        display: block;
+      }
+    </style>
+
+    <form id="form">
+      <label for="cep">CEP</label>
+      <input type="text" name="cep" id="cep" placeholder="00000-000" />
+      <button type="submit" id="submit">Buscar</button>
+    </form>
+    <div class="cepRetorno"></div>
+    <div>
+      <h2>Preço Bitcoin</h2>
+      <p class="bitcoin"></p>
+    </div>
+    <div>
+      <h2>Chuck Norris</h2>
+      <p class="joke"></p>
+      <button id="get-joke">proxima piada</button>
+    </div>
+    <script src="script.js"></script>
+  </body>
 </html>
